--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="styles/reset.css">
+  <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/base.css">
   <link rel="stylesheet" href="styles/layout.css">
   <link rel="stylesheet" href="styles/modules.css">
@@ -12,23 +12,22 @@
 </head>
 <body>
   <div id="a">a</div>
-  <section>
-    <div id="b">b</div>
-    <div id="subSection">
-      <div id="cd">
-        <div id="c">c</div>
-        <div id="d">d</div>
-      </div>
-      
-      <div id="efgh">
-        <div id="e">e</div>
-        <div id="f">f</div>
-        <div id="g">g</div>
-        <div id="h">h</div>
-      </div>
-      <div id="i">i</div>     
-    </div>
-  </section>
+  <div id="b">b</div>
+  <div id="cd">
+    <div id="c">c</div>
+    <div id="d">d</div>
+  </div>
+  <div class="quartet">
+    <div id="e">e</div>
+    <div id="f">f</div>
+  </div>
+  <div class="quartet">
+    <div id="g">g</div>
+    <div id="h">h</div>
+  </div>
+  
+  <div id="i">i</div> 
+  
   
 </body>
 </html>
